Messing with Grid Setup

--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
 <body>
     <div id="header">Memory Game</div>
     <div id="game">
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
+        <div id="tiles" class="tiles"></div>
+        <div id="tiles" class="tiles"></div>
+        <div id="tiles" class="tiles"></div>
+        <div id="tiles" class="tiles"></div>
+        <div id="tiles" class="tiles"></div>
+        <div id="tiles" class="tiles"></div>
+        <div class="otherTiles" id="otherTiles"></div>
+        <div class="otherTiles" id="otherTiles"></div>
+        <div class="otherTiles" id="otherTiles"></div>
+        <div class="otherTiles" id="otherTiles"></div>
+        <div class="otherTiles" id="otherTiles"></div>
+        <div class="otherTiles" id="otherTiles"></div>
     </div>
+    <div id="scoreHeader">
+        Score
+        <div id="score">
+            0
+        </div>
+    </div>
+    <input type="button" value="Reset" />
 </body>
 </html>
     <script src="index.js"></script>
