CSS and HTML done. Working on Javascript

--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
     <link rel="stylesheet" href="styles.css"></link:rel>
 </head>
 <body>
+    <div id="modal">
+        <div id="modalContent">X</div>
+    </div>
     <div id="header">Memory Game</div>
     <div id="game">
-        <div id="tiles" class="tiles"></div>
-        <div id="tiles" class="tiles"></div>
-        <div id="tiles" class="tiles"></div>
-        <div id="tiles" class="tiles"></div>
-        <div id="tiles" class="tiles"></div>
-        <div id="tiles" class="tiles"></div>
-        <div class="otherTiles" id="otherTiles"></div>
-        <div class="otherTiles" id="otherTiles"></div>
-        <div class="otherTiles" id="otherTiles"></div>
-        <div class="otherTiles" id="otherTiles"></div>
-        <div class="otherTiles" id="otherTiles"></div>
-        <div class="otherTiles" id="otherTiles"></div>
+        <div id="tiles1" class="tiles"></div>
+        <div id="tiles2" class="tiles"></div>
+        <div id="tiles3" class="tiles"></div>
+        <div id="tiles4" class="tiles"></div>
+        <div id="tiles5" class="tiles"></div>
+        <div id="tiles6" class="tiles"></div>
+        <div class="otherTiles" id="otherTiles1">
+            <img src="Happy.png" />
+        </div>
+        <div class="otherTiles" id="otherTiles2"></div>
+        <div class="otherTiles" id="otherTiles3"></div>
+        <div class="otherTiles" id="otherTiles4"></div>
+        <div class="otherTiles" id="otherTiles5"></div>
+        <div class="otherTiles" id="otherTiles6"></div>
+        
     </div>
     <div id="scoreHeader">
-        Score
+        Sets Completed
         <div id="score">
             0
         </div>
