--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
         <div id="tiles5" class="tiles"></div>
         <div id="tiles6" class="tiles"></div>
         <div class="otherTiles" id="otherTiles1">
-            <img src="Happy.png" />
+            <img src="Happy.png" id="image1"/>
         </div>
-        <div class="otherTiles" id="otherTiles2"></div>
-        <div class="otherTiles" id="otherTiles3"></div>
-        <div class="otherTiles" id="otherTiles4"></div>
-        <div class="otherTiles" id="otherTiles5"></div>
-        <div class="otherTiles" id="otherTiles6"></div>
+        <div class="otherTiles" id="otherTiles2">
+            <img src="" id="image2"/>
+        </div>
+        <div class="otherTiles" id="otherTiles3">
+            <img src="" id="image3"/>
+        </div>
+        <div class="otherTiles" id="otherTiles4">
+            <img src="" id="image4"/>
+        </div>
+        <div class="otherTiles" id="otherTiles5">
+            <img src="" id="image5"/>
+        </div>
+        <div class="otherTiles" id="otherTiles6">
+            <img src="" id="image6"/>
+        </div>
         
     </div>
     <div id="scoreHeader">
