--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="tiles5" class="tiles"></div>
         <div id="tiles6" class="tiles"></div>
         <div class="otherTiles" id="otherTiles1">
-            <img src="Happy.png" id="image1"/>
+            <img src="" id="image1"/>
         </div>
         <div class="otherTiles" id="otherTiles2">
             <img src="" id="image2"/>
@@ -44,7 +44,7 @@
             0
         </div>
     </div>
-    <input type="button" value="Reset" />
+    <input type="button" value="Reset" onclick=resetScore() />
 </body>
 </html>
     <script src="index.js"></script>
